# news-aggregator

./: .gitignore  pyproject.toml
news_aggregator/: main.py  shorten.py
news_aggregator/news_aggregator/: bbc_articles.json  bbcarticles.csv  main.py  middlewares.py  settings.py
news_aggregator/news_aggregator/spiders/: newsspider.py  pcgamerspider.py  voxspider.py
news_aggregator/news_aggregator/utils/: mail_handler.py  sentiment_analyzer.py  shortener.py
