[tool.poetry]
name = "news-aggregator"
version = "0.1.0"
description = ""
authors = ["grochalapiotr <miami2042@gmail.com>"]
readme = "README.md"
packages = [{include = "news_aggregator"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
